tests/parsing/smtlib/v2.6/errors/118_assert_bad_term_1.expected
File "tests/parsing/smtlib/v2.6/errors/118_assert_bad_term_1.smt2", line 1, character 8-9:
1 | (assert _
            ^
Error while parsing a term, read the reserved word '_',
      but expected a term construction (symbol, function application, match,
      let binding, ...); note that keywords and reserved words (such as '_',
      'as', ...) are not symbols, and thus are not allowed here.
